--- a/Inhalt/04_Inhalt/grundlagen.tex
+++ b/Inhalt/04_Inhalt/grundlagen.tex
@@ -24,7 +24,7 @@ Um den Sinn eines Satzes zu verstehen, muss der Inhalt schrittweise verarbeitet 
 Für Textanalysen, Übersetzungen oder Zusammenfassungen wurden lange Zeit Recurrent Neural Networks (RNNs) verwendet.  
 RNNs analysieren einen Text sequentiell und verknüpfen jedes Wort mit dem Kontext aus dem vorhergehenden Wort (vgl. \cite[S. 2]{attention}).  
 
-Doch RNNs haben Schwächen (vgl. \cite[S. 2]{attention}).
+Doch RNNs haben Schwächen (vgl. \cite[S. 2]{attention}) (vgl. \cite[S. 208]{paass.2020}).
 Sie haben Schwierigkeiten, den Kontext von größeren Texten vollständig zu erfassen.  
 Außerdem ist die sequentielle Verarbeitung ineffizient und schlecht auf moderne Hardware optimiert, die auf Parallelverarbeitung ausgelegt ist.  
 
