--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -43,4 +43,22 @@
     url={https://doi.org/10.1007/978-3-658-30211-5}
 }
 
+@misc{bert,
+    title={BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding},
+    author={Jacob Devlin and Ming-Wei Chang and Kenton Lee and Kristina Toutanova},
+    year={2019},
+    howpublished={\url{https://arxiv.org/pdf/1810.04805}},
+    note={Zugriff am 8. Januar 2025}
+}
+
+@ARTICLE{ieee,
+  author={Feng, Weibin and Wang, Xiaoping and Xie, Jialan and Liu, Wanqing and Qiao, Yinghao and Liu, Guangyuan},
+  journal={IEEE Sensors Journal}, 
+  title={Real-Time EEG-Based Driver Drowsiness Detection Based on Convolutional Neural Network With Gumbel-Softmax Trick}, 
+  year={2025},
+  volume={25},
+  number={1},
+  pages={1860-1871},
+  keywords={Electroencephalography;Brain modeling;Neurons;Feature extraction;Training;Accuracy;Vectors;Target tracking;Reviews;Real-time systems;Driver drowsiness detection;electroencephalography (EEG);graphical user interface (GUI);Gumbel-Softmax trick;real-time},
+  doi={10.1109/JSEN.2024.3492176}}
 
