--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -62,3 +62,10 @@
   keywords={Electroencephalography;Brain modeling;Neurons;Feature extraction;Training;Accuracy;Vectors;Target tracking;Reviews;Real-time systems;Driver drowsiness detection;electroencephalography (EEG);graphical user interface (GUI);Gumbel-Softmax trick;real-time},
   doi={10.1109/JSEN.2024.3492176}}
 
+@misc{layernorm,
+    title={On Layer Normalization in the Transformer Architecture},
+    author={Ruibin Xiong and Yunchang Yang and Di He and Kai Zheng and Shuxin Zheng and Chen Xing and Huishuai Zhang and Yanyan Lan and Liwei Wang and Tie-Yan Liu},
+    year={2020},
+    howpublished={\url{https://doi.org/10.48550/arXiv.2002.04745}},
+    note={Zugriff am 8. Januar 2025}
+}
