--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -1,17 +1,19 @@
 \chapter*{Abkürzungsverzeichnis}
 \addcontentsline{toc}{chapter}{Abkürzungsverzeichnis} % Hinzufügen zum Inhaltsverzeichnis 
 
-\begin{acronym}[WYSISWG] % längstes Kürzel wird verw. für den Abstand zw. Kürzel u. Text
+\begin{acronym}[dmodel] % längstes Kürzel wird verw. für den Abstand zw. Kürzel u. Text
 
 	% Alphabetisch selbst sortieren - nicht verwendete Kürzel rausnehmen!
-	\acro{BEHG}{Brennstoffemissionshandelsgesetz}
-	\acro{CBAM}{Carbon Border Adjustment Mechanism (dt. Grenzausgleichsmechanismus)}
-	\acro{DEHSt}{Deutsche Emissionshandelsstelle}
-	\acro{EPA}{United States Environmental Protection Agency (dt. Umweltschutzbehörde der Vereinigten Staaten)}
-	\acro{ETS}{Emission Trading System (dt. Emissionshandelssystem)}
-	\acro{ICAP}{International Carbon Action Partnership (dt. Internationale Partnerschaft für Emissionshandel)}
-	\acro{MSR}{Market Stability Reserve (dt. Marktstabilitätsreserve)}
-	\acro{nEHS}{Nationales Emissionshandelssystem}
-	\acro{TNAC}{Total Number of Allowances in Circulation (dt. Anzahl der Zertifikate im Umlauf)}
+	\acro{BERT}{Bidirectional Encoder Representations from Transformers}
+	\acro{dmodel}{Dimension des Modells}
+	\acro{GPT}{Generative Pre-trained Transformer}
+	\acro{K}{Key-Matrix}
+	\acro{ML}{Machine Learning}
+	\acro{PE}{Positional Encoding}
+	\acro{Q}{Query-Matrix}
+	\acro{ReLU}{Rectified Linear Unit}
+	\acro{RNN}{Recurrent Neural Network}
+	\acro{T5}{Text-to-Text Transfer Transformer}
+	\acro{V}{Value-Matrix}
 
 \end{acronym}
